removing position fixed when on mobile when overlays are open

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,10 +13,6 @@ body {
     &.video-modal-open,
     &.modal-open {
         overflow: hidden;
-
-        @media(--phone) {
-            position: fixed;
-        }
     }
  }
 
